// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders CircleIcon 1`] = `
<CircleIcon
  style={
    Object {
      "fill": "#ff0000",
      "stroke": "rgb(106,173,213)",
      "strokeWidth": "1px",
    }
  }
/>
`;

exports[`Renders LineIcon 1`] = `
<LineIcon
  style={
    Object {
      "stroke": "rgb(106,173,213)",
      "strokeWidth": "4px",
    }
  }
/>
`;

exports[`Renders PolygonIcon 1`] = `
<PolygonIcon
  style={
    Object {
      "fill": "#ff0000",
      "stroke": "rgb(106,173,213)",
      "strokeWidth": "1px",
    }
  }
/>
`;

exports[`Renders SymbolIcon 1`] = `
<SymbolIcon
  fill="#ff0000"
  key="airfield-15#ff0000rgb(106,173,213)"
  stroke="rgb(106,173,213)"
  style={Object {}}
  svg="<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>\\\\n<svg version=\\"1.1\\" id=\\"airfield-15\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"15px\\" height=\\"15px\\" viewBox=\\"0 0 15 15\\">\\\\n  <path id=\\"path5\\" d=\\"M6.8182,0.6818H4.7727 C4.0909,0.6818,4.0909,0,4.7727,0h5.4545c0.6818,0,0.6818,0.6818,0,0.6818H8.1818c0,0,0.8182,0.5909,0.8182,1.9545V4h6v2L9,8l-0.5,5 l2.5,1.3182V15H4v-0.6818L6.5,13L6,8L0,6V4h6V2.6364C6,1.2727,6.8182,0.6818,6.8182,0.6818z\\"/>\\\\n</svg>"
  symbolId="airfield-15"
/>
`;

exports[`Renders SymbolIcon with custom icon 1`] = `
<SymbolIcon
  fill="#00ff00"
  key="__kbn__custom_icon_sdf__foobar#00ff00rgb(0,255,0)"
  stroke="rgb(0,255,0)"
  style={Object {}}
  svg="<svg width=\\"200\\" height=\\"250\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path stroke=\\"#000\\" fill=\\"transparent\\" stroke-width=\\"5\\" d=\\"M10 10h30v30H10z\\"/></svg>"
  symbolId="__kbn__custom_icon_sdf__foobar"
/>
`;
